--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Lawyer's Diary</title>
+  <title>Advocate's Diary</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#2c3e50">
@@ -16,8 +17,10 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/icon-192x192.png">
   <link rel="apple-touch-icon" sizes="167x167" href="assets/icons/icon-152x152.png">
 </head>
+
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
